--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
     <head>
-        <script src="p5.js"></script>
-        <link rel="stylesheet" href="styles.css"/>
-        <script src="raycast.js"></script>
+        <script src="js/p5.js"></script>
+        <link rel="stylesheet" href="css/styles.css"/>
+        <script src="js/raycast.js"></script>
     </head>
     <body>
     </body>
